Modyfikacja szablonu, by pokazywal posty z bazy danych

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,7 +1,11 @@
-﻿<html>
+﻿{% load staticfiles %}
+<html>
 <head>
 <meta charset="UTF-8">
 <title>Blog Karoli</title>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
 <body>
     <p>Hej!</p>
@@ -10,6 +14,8 @@
 	<div>
             <h1><a href="">Django Girls Blog</a></h1>
         </div>
+		
+		{% for post in posts %}
 		
 		<div>
             <p>published: 14.06.2014, 12:14</p>
@@ -25,7 +31,7 @@
 		<div>
             <h2>W Łodzi jest fajnie!</h2>
         </div>
-		
+		{% endfor %}
 		
 		
 </body>
